@@ -46,4 +46,3 @@
 18. TSL 'FIle' class parameterless contructor creates OpenFileDialog, we need Open/Save File Dialog
 19. Exponents cant have spaces right now because of TSLCompiler regex, maybe we should allow it
 20. Autocomplete is comparing substring including whole signature of function, should only use name
-21. 'dynamic' functions do not appear in autocomplete
