@@ -132,6 +132,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -305,9 +306,7 @@
     <Compile Include="UI\Forms\ReadForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="UI\Controls\ScientificNumericUpDown.cs">
-      <SubType>component</SubType>
-    </Compile>
+    <Compile Include="UI\Controls\ScientificNumericUpDown.cs" />
     <Compile Include="UI\Controls\ScientificNumericUpDown.Designer.cs">
       <DependentUpon>ScientificNumericUpDown.cs</DependentUpon>
     </Compile>
