@@ -1,4 +1,5 @@
-﻿using System.Xml.Serialization;
+﻿using System.Xml;
+using System.Xml.Serialization;
 
 namespace Computator.NET.Functions
 {
@@ -6,7 +7,11 @@ namespace Computator.NET.Functions
     public class FunctionInfo
     {
         [XmlElement("Category")] public string Category;
-        [XmlElement("Description")] public string Description;
+
+
+        //[XmlIgnore]
+        [XmlElement("Description")]
+        public string Description;
 
         [XmlAttribute(DataType = "string", AttributeName = "Signature")] public string
             Signature;
@@ -14,6 +19,8 @@ namespace Computator.NET.Functions
         [XmlElement("Title")] public string Title;
         [XmlElement("Type")] public string Type;
         [XmlElement("Url")] public string Url;
+
+
 
         public FunctionInfo()
         {
